--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
   <h1>Welcome to our website</h1>
+  <p>this is my first paragraph. and this is my section of newbranch</p>
 </body>
 </html>
